--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -140,7 +140,7 @@
 
     width: 225px;
 
-    // Schedules with only one track column (WP Cafe and Wellness at WCEU)
+    // Schedules with only one track column (WP Cafe and Wellness at WCANT)
     &:nth-of-type(2):last-of-type {
       width: auto;
     }
