--- a/source/assets/stylesheets/_elements.headings.scss
+++ b/source/assets/stylesheets/_elements.headings.scss
@@ -22,7 +22,7 @@ h4 {
   margin-bottom: $unit-xs;
 
   font-family: $font-headline;
-  font-weight: $medium;
+  font-weight: $bold;
   line-height: ms(1);
 
   &:first-child {
