--- a/source/assets/stylesheets/_components.branding.scss
+++ b/source/assets/stylesheets/_components.branding.scss
@@ -29,15 +29,15 @@
   overflow: hidden; // Add overflow: hidden to keep light beams from leaking out
   margin-bottom: 0!important; // Add this to override inline styling
 
-  @include container-padding(3.5);
+  @include container-padding(1);
 
   text-align: center;
 
-  .home & {
-
-    @include container-padding(4.5);
-
-  }
+  //.home & {
+  //
+  //  @include container-padding(4.5);
+  //
+  //}
 
 }
 
@@ -48,25 +48,12 @@
   font-size: ms(2);
   line-height: 1;
   font-family: $font-headline;
-  font-weight: $medium;
   text-transform: uppercase;
   color: $color-brand-primary;
 
   a {
-
     display: block;
-    color: rgb(255, 255, 255);
     letter-spacing: .01em;
-
-    &:hover,
-    &:focus,
-    &:active {
-
-      color: rgba(255, 255, 255, .75);
-      text-decoration: none;
-
-    }
-
   }
 
   a:before {
@@ -79,18 +66,15 @@
     margin-bottom: rem(36);
 
     background-repeat: no-repeat;
-    background-position: 50% 50%;
     background-image: $site-logo-path;
     background-size: 100%;
 
     content: "";
 
   }
-
 }
 
 .site-description {
-
   margin: 0;
   margin-top: $unit-xs;
 
@@ -99,6 +83,47 @@
   font-family: $font-body;
   font-weight: $regular;
   text-transform: none;
-  color: rgb(255, 255, 255);
+}
 
+
+
+@include breakpoint(medium) {
+  .custom-header {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+
+    .site-branding {
+      position: relative;
+      text-align: right;
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
+      flex-direction: column;
+      padding-top: 9rem;
+    }
+
+    .site-title {
+      width: 100%;
+      position: relative;
+
+      a {
+        display: inline-block;
+        max-width: 60%;
+      }
+
+      a:before {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        max-width: 40%;
+        margin-bottom: -2rem;
+      }
+    }
+
+    .site-description {
+      display: inline-block;
+      max-width: 60%;
+    }
+  }
 }
