--- a/source/assets/stylesheets/_settings.other.scss
+++ b/source/assets/stylesheets/_settings.other.scss
@@ -44,10 +44,10 @@ $box-shadow-large:              0 rem(1) rem(24) 0 rgba(0,0,0,.2);
 // $box-shadow-link-hover:        inset 0 -2px 0 0 rgba($color-link, .75);
 
 /* Logo size */
-$site-logo-width:               360px; // Width of the image/element
-$site-logo-height:              360px; // Height of the image/element
+$site-logo-width:               382px; // Width of the image/element
+$site-logo-height:              330px; // Height of the image/element
 $site-logo-proportion:          .5; // Change the logo proportion in header e.g. .5 will reduce the logo size by half.
-$site-logo-path:                url('https://2019.europe.wordcamp.org/files/2018/10/logo-wceu-2019.png'); // Logo image
+$site-logo-path:                url('https://2020.antwerp.wordcamp.org/files/2019/11/Logo-WordCamp-Antwerp-2020-4.png'); // Logo image
 // $site-logo-path:                url('https://2017.europe.wordcamp.org/files/2016/11/logo-wceu17-dark-icon.png'); // Logo image
 
 /* Hero */
@@ -55,15 +55,8 @@ $site-hero-path-pattern:        url('https://2018.europe.wordcamp.org/files/2017
 $site-hero-path-small:          url('https://2019.europe.wordcamp.org/files/2019/01/wceu_2019_hero_header2_mobile.jpg'); // Background image
 $site-hero-path-large:          url('https://2019.europe.wordcamp.org/files/2019/01/wceu_2019_hero_header2_desktop.jpg'); // Background image
 $site-hero-path-wide:           url('https://2019.europe.wordcamp.org/files/2019/01/wceu_2019_hero_header2_desktop.jpg'); // Background image
-$site-hero-background:          $color-brand-quaternary; // Hero color background
+$site-hero-background:          white; // Hero color background
 $site-hero-overlay:             0; // Image overlay color opacity
-
-// Old header, for reference only
-// $site-hero-path-small:          url('https://2018.europe.wordcamp.org/files/2017/11/header-wceu18-hero-mobile.jpg'); // Background image
-// $site-hero-path-large:          url('https://2018.europe.wordcamp.org/files/2017/11/header-wceu18-hero-desktop.jpg'); // Background image
-// $site-hero-path-wide:           url('https://2018.europe.wordcamp.org/files/2017/11/header-wceu18-hero-desktop-wide.jpg'); // Background image
-// $site-hero-path-wide-temp:      url('https://2018.europe.wordcamp.org/files/2018/03/wceu-header-wide.jpg'); // Background image
-
 
 /* Media queries */
 $extra-small-value:             24em; // 384px
