--- a/source/assets/stylesheets/bourbon/addons/_font-stacks.scss
+++ b/source/assets/stylesheets/bourbon/addons/_font-stacks.scss
@@ -29,3 +29,8 @@ $monospace: "Bitstream Vera Sans Mono", "Consolas", "Courier", monospace;
 /// @type List
 
 $verdana: "Verdana", "Geneva", sans-serif;
+
+/// System font stack.
+///
+/// @type List
+$system: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
