--- a/source/assets/stylesheets/_components.widget-subscribe.scss
+++ b/source/assets/stylesheets/_components.widget-subscribe.scss
@@ -14,18 +14,17 @@
   text-align: center;
 
   &:before {
-
-    background: #1598a8 url('https://2019.europe.wordcamp.org/files/2019/02/wceu2019_jetpack_subscibe.jpg') no-repeat;
+    background-color: $color-brand-quaternary;
     background-attachment: fixed;
     -webkit-background-size: cover;
-    -moz-background-size: cover; 
+    -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 
   }
 
   .widget-title {
-    
+
     font-weight: $light;
     color: $color-text-strong-invert;
     letter-spacing: .01em;
