--- a/source/assets/stylesheets/_settings.colors.scss
+++ b/source/assets/stylesheets/_settings.colors.scss
@@ -216,9 +216,9 @@
 
 $color-brand-primary:             #B9202B; // red
 $color-brand-secondary:           #FBB03B; // yellow
-$color-brand-tertiary:            #000000; // Black
-$color-brand-quaternary:             lighten($color-brand-primary, 10%); // Turkoois
-$color-brand-quinary:             #999999; // Dark turkoois
+$color-brand-tertiary:            #000000; // black
+$color-brand-quaternary:             lighten($color-brand-primary, 15%);
+$color-brand-quinary:             #999999;
 
 @include cc($color-brand-primary, 'color-brand-primary');
 @include cc($color-brand-secondary, 'color-brand-secondary');
