--- a/source/assets/stylesheets/style.scss
+++ b/source/assets/stylesheets/style.scss
@@ -126,7 +126,7 @@
 @import "components.helpers";
 @import "components.images";
 
-@import "_componets.gutenberg";
+@import "components.gutenberg";
 
 // Trumps
 //
