--- a/source/assets/stylesheets/_components.header.scss
+++ b/source/assets/stylesheets/_components.header.scss
@@ -20,7 +20,22 @@
 
   position: relative;
 
+  background-image: $site-hero-path;
   background-color: $site-hero-background;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($site-hero-background, $site-hero-overlay);
+  }
 
   > * {
 
