--- a/source/assets/stylesheets/_settings.other.scss
+++ b/source/assets/stylesheets/_settings.other.scss
@@ -48,15 +48,13 @@ $site-logo-width:               382px; // Width of the image/element
 $site-logo-height:              330px; // Height of the image/element
 $site-logo-proportion:          .5; // Change the logo proportion in header e.g. .5 will reduce the logo size by half.
 $site-logo-path:                url('https://2020.antwerp.wordcamp.org/files/2019/11/Logo-WordCamp-Antwerp-2020-4.png'); // Logo image
+$site-logo-white-path:          url('https://2020.antwerp.wordcamp.org/files/2019/11/Logo-WordCamp-Antwerp-2020-White-scaled.png'); // Logo image
 // $site-logo-path:                url('https://2017.europe.wordcamp.org/files/2016/11/logo-wceu17-dark-icon.png'); // Logo image
 
 /* Hero */
-$site-hero-path-pattern:        url('https://2018.europe.wordcamp.org/files/2017/10/pattern-01.png'); // Background patterns
-$site-hero-path-small:          url('https://2019.europe.wordcamp.org/files/2019/01/wceu_2019_hero_header2_mobile.jpg'); // Background image
-$site-hero-path-large:          url('https://2019.europe.wordcamp.org/files/2019/01/wceu_2019_hero_header2_desktop.jpg'); // Background image
-$site-hero-path-wide:           url('https://2019.europe.wordcamp.org/files/2019/01/wceu_2019_hero_header2_desktop.jpg'); // Background image
-$site-hero-background:          white; // Hero color background
-$site-hero-overlay:             0; // Image overlay color opacity
+$site-hero-path:        url('https://2020.antwerp.wordcamp.org/files/2019/11/header-img-wcant2020-scaled.jpg'); // Background patterns
+$site-hero-background: $color-brand-primary; // Hero color background
+$site-hero-overlay: 0.4; // Image overlay color opacity
 
 /* Media queries */
 $extra-small-value:             24em; // 384px
