--- a/source/assets/stylesheets/_settings.other.scss
+++ b/source/assets/stylesheets/_settings.other.scss
@@ -28,6 +28,7 @@ $container-unit-large:          $unit-xl;
 
 /* Container max width */
 $container-max-width:           rem(800);
+$container-max-width-wide:           rem(1200);
 
 /* Border radius */
 $border-radius-small:           rem(3);
