--- a/source/assets/stylesheets/style.scss
+++ b/source/assets/stylesheets/style.scss
@@ -119,10 +119,9 @@
 @import "components.widget-text-tickets-cta";
 
 @import "components.page";
-@import "components.page-sponsors";
-@import "components.page-attendees";
 @import "components.page-day-of";
 @import "components.page-search";
+@import "components.page-location";
 @import "components.helpers";
 @import "components.images";
 
