--- a/source/assets/stylesheets/_components.post.scss
+++ b/source/assets/stylesheets/_components.post.scss
@@ -38,7 +38,9 @@
 
 }
 
-.entry-header {}
+.entry-header {
+  margin-bottom: $unit-default;
+}
 
 .entry-content {
 
@@ -58,17 +60,48 @@
       box-shadow: inset 0 -2px 0 0 rgba($color-link-hover, .75);
 
     }
-    
+
     &.more-link {
-      
+
       display: inline-block;
       margin-bottom: $unit-l;
-      
+
     }
 
   }
 
 }
+
+.single{
+  .entry-header{
+    @include container-center();
+
+    padding-left: $container-unit-small;
+    padding-right: $container-unit-small;
+
+  }
+  .entry-title,
+  .entry-meta{
+    @include container-center();
+
+    padding-left: $container-unit-small;
+    padding-right: $container-unit-small;
+
+  }
+}
+
+.page .entry-header,
+.hfeed .page-header{
+  @include container-center();
+
+  padding-left: $container-unit-small;
+  padding-right: $container-unit-small;
+
+  .entry-title{
+    margin-bottom: 0;
+  }
+}
+
 
 .entry-title {
 
