--- a/source/assets/stylesheets/_components.gutenberg.scss
+++ b/source/assets/stylesheets/_components.gutenberg.scss
@@ -14,9 +14,9 @@
 // Style guide: 6.gutenberg.jetpack-gallery
 .wp-block-gallery {
   .blocks-gallery-image figcaption, .blocks-gallery-item figcaption {
-    padding:5px!important;;
-    color: $color-brand-primary!important;;
-    background:$color-grey-10!important;;
+    padding: 5px !important;
+    color: $color-brand-primary !important;
+    background: $color-grey-10 !important;
   }
 }
 
