--- a/source/assets/stylesheets/_components.post.scss
+++ b/source/assets/stylesheets/_components.post.scss
@@ -46,7 +46,7 @@
 
   @include clearfix();
 
-  a {
+  a:not(.wp-block-button__link) {
 
     color: $color-link;
     box-shadow: inset 0 -1px 0 0 rgba($color-link, .5);
