--- a/source/assets/stylesheets/_components.main.scss
+++ b/source/assets/stylesheets/_components.main.scss
@@ -125,7 +125,9 @@
     }
 
     > ul, > ol {
-      padding-left: 2rem;
+      &:not(.alignleft):not(.alignright):not(.alignwide):not(.alignfull):not(.is-style-wide) {
+        padding-left: 2rem;
+      }
     }
 
     *.alignwide {
