--- a/source/assets/stylesheets/_components.main.scss
+++ b/source/assets/stylesheets/_components.main.scss
@@ -113,8 +113,9 @@
 
 .single,
 .page,
+.error404,
 .blog {
-  .entry-content{
+  .entry-content, .page-content{
     > *:not(.alignleft):not(.alignright):not(.alignwide):not(.alignfull):not(.is-style-wide){
       @include container-center();
 
