--- a/source/assets/stylesheets/_components.main.scss
+++ b/source/assets/stylesheets/_components.main.scss
@@ -114,8 +114,9 @@
 .single,
 .page,
 .error404,
+.search,
 .blog {
-  .entry-content, .page-content{
+  .entry-content, .page-content, .entry-summary{
     > *:not(.alignleft):not(.alignright):not(.alignwide):not(.alignfull):not(.is-style-wide){
       @include container-center();
 
