Sponsor styling in footer

--- a/source/assets/stylesheets/_components.footer.scss
+++ b/source/assets/stylesheets/_components.footer.scss
@@ -22,6 +22,8 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: $unit-xl;
+  padding-left: $container-unit-small;
+  padding-right: $container-unit-small;
 
   text-align: center;
 
