--- a/source/assets/stylesheets/_components.sponsors.scss
+++ b/source/assets/stylesheets/_components.sponsors.scss
@@ -199,18 +199,21 @@
     align-items: center;
     align-content: center;
     padding-bottom: $unit-l;
+    margin-left: -10px;
+    margin-right: -10px;
 
     .sponsor-level-title {
       // Sponsor level title.
       text-align: left;
       flex-basis: 100%;
       font-size: ms(0);
+      padding: 0 10px;
     }
 
     a.sponsor-logo {
       // Anchor
       display: block;
-      padding: 5px;
+      padding: 10px;
       flex-basis: 50%;
 
       img.wp-post-image {
@@ -235,13 +238,13 @@
 
     &.gold {
       a.sponsor-logo {
-        flex-basis: 100%;
+        flex-basis: 33%;
       }
     }
 
     &.silver {
       a.sponsor-logo {
-        flex-basis: 50%;
+        flex-basis: 25%;
       }
     }
 
@@ -257,12 +260,12 @@
 
     @include breakpoint(medium) {
       &.gold {
-        flex-basis: 60%;
-        padding-right: $unit-default;
+        //flex-basis: 60%;
+        //padding-right: $unit-default;
       }
 
       &.silver {
-        flex-basis: 40%;
+        //flex-basis: 40%;
       }
 
       &.bronze {
