--- a/source/assets/stylesheets/_components.widgets.scss
+++ b/source/assets/stylesheets/_components.widgets.scss
@@ -93,11 +93,11 @@
   margin-left: auto;
   margin-right: auto;
 
-  padding: $container-unit-small 0;
+  padding: ($container-unit-small * 2) 0;
 
   @include breakpoint(medium) {
 
-    padding: $container-unit-medium 0;
+    padding: ($container-unit-medium * 2) 0;
 
   }
 
@@ -124,6 +124,9 @@
   // padding-left: 0;
   // padding-right: 0;
   text-align: center;
+  margin: $container-unit-small*2 0;
+  padding-top: 0;
+  padding-bottom: 0;
 
   > * {
 
