--- a/source/assets/stylesheets/_components.widgets.scss
+++ b/source/assets/stylesheets/_components.widgets.scss
@@ -124,9 +124,6 @@
   // padding-left: 0;
   // padding-right: 0;
   text-align: center;
-  margin: $container-unit-small*2 0;
-  padding-top: 0;
-  padding-bottom: 0;
 
   > * {
 
@@ -235,4 +232,12 @@
 
   }
 
+}
+
+#secondary-sidebar {
+  .widget {
+    margin: $container-unit-small*2 0;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
