--- a/source/assets/stylesheets/_components.widgets.scss
+++ b/source/assets/stylesheets/_components.widgets.scss
@@ -236,7 +236,8 @@
 
 #secondary-sidebar {
   .widget {
-    margin: $container-unit-small*2 0;
+    margin-top: $container-unit-small*2;
+    margin-bottom: $container-unit-small*2;
     padding-top: 0;
     padding-bottom: 0;
   }
