Final one for footer paddings :)

--- a/source/assets/stylesheets/_components.footer.scss
+++ b/source/assets/stylesheets/_components.footer.scss
@@ -21,7 +21,7 @@
   max-width: $container-max-width;
   margin-left: auto;
   margin-right: auto;
-  margin-top: $unit-xl;
+  // margin-top: $unit-xl;
   padding-left: $container-unit-small;
   padding-right: $container-unit-small;
 
