--- a/source/assets/stylesheets/_components.widgets.scss
+++ b/source/assets/stylesheets/_components.widgets.scss
@@ -234,7 +234,7 @@
 
 }
 
-#secondary-sidebar {
+#secondary-sidebar, #colophon {
   .widget {
     margin-top: $container-unit-small*2;
     margin-bottom: $container-unit-small*2;
