--- a/source/assets/stylesheets/_components.sponsors.scss
+++ b/source/assets/stylesheets/_components.sponsors.scss
@@ -7,7 +7,7 @@
 
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     text-align: center;
     align-items: center;
 
