--- a/source/assets/stylesheets/_components.speakers.scss
+++ b/source/assets/stylesheets/_components.speakers.scss
@@ -122,9 +122,9 @@
     width: 100%;
     height: auto;
     margin: 0;
-    -webkit-border-radius: 50%; 
-    -moz-border-radius: 50%; 
-    border-radius: 50%; 
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
     border:4px solid $color-brand-primary;
   }
 
@@ -189,3 +189,24 @@
   height:280px;
 }
 
+/** Speaker blocks **/
+.wordcamp-speakers {
+    &__post {
+      // Container div
+      @extend .outline;
+      @include clearfix();
+    }
+
+    &__title {
+      // Speaker name
+      a {
+        box-shadow: none;
+      }
+    }
+
+  .wordcamp-image__avatar-container {
+    img {
+      margin-bottom: 0;
+    }
+  }
+}
