Fix single session layout.

--- a/source/assets/stylesheets/_components.session.scss
+++ b/source/assets/stylesheets/_components.session.scss
@@ -34,7 +34,10 @@
 
   #session-speaker-names {
 
-    @include list-reset();
+    //@include list-reset();
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-left: auto;
 
   }
 
