Aligning titles on sessions & speakers page

--- a/source/assets/stylesheets/_components.speakers.scss
+++ b/source/assets/stylesheets/_components.speakers.scss
@@ -193,6 +193,12 @@
   height: 280px;
 }
 
+.post-8.page {
+  h1.entry-title {
+    text-align: center;
+  }
+}
+
 /** Speaker blocks **/
 .wordcamp-speakers {
   .wordcamp-post-list__post {
