--- a/source/assets/stylesheets/_components.post.scss
+++ b/source/assets/stylesheets/_components.post.scss
@@ -47,7 +47,7 @@
 
   @include clearfix();
 
-  a:not(.wp-block-button__link) {
+  a:not(.wp-block-button__link):not(.wcpt-session-title) {
 
     color: $color-link;
     box-shadow: inset 0 -1px 0 0 rgba($color-link, .5);
