Title for schedule page centered.

--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -620,6 +620,13 @@ $session-type-color-content:     #333333; // Dark gray
 
 }
 
+.post-7.page {
+  h1.entry-title {
+    text-align: center;
+  }
+}
+
+
 
 /*
  * Old schedule
