Hide schedule featured image.

--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -624,6 +624,10 @@ $session-type-color-content:     #333333; // Dark gray
   h1.entry-title {
     text-align: center;
   }
+
+  .entry-image {
+    display: none;
+  }
 }
 
 
